@@ -1,3 +1,11 @@
+2003-07-17  Peter Williams  <peter@newton.cx>
+
+	* Makefile ($(testlib)): Build with $(BOOT_COMPILE), not $(CSCOMPILE),
+	which sort of makes sense and is needed on Windows too.
+	($(corlib)): same.
+	$(cmplib): Don't include the makefrag to save the Windows build and some
+	time.
+
 2003-07-16  Peter Williams  <peter@newton.cx>
 
 	* Makefile ($(test_makefrag)): Use $(ECHO_ESCAPE) for HP/UX
